SERVER-15017: benchRun might return incorrect stats values